# trace

./: .gitignore  README.md  pyproject.toml
examples/: basic_audit.py  precision_sweep.py  trace_quickstart.ipynb
src/trace_lib/: __init__.py  audit.py  circuit_tracer.py  datasets.py  hook_manager.py  metrics.py  optimization_auditor.py  sae.py  utils.py
tests/: __init__.py  test_audit.py  test_datasets.py  test_metrics.py  test_optimization_auditor.py  test_sae.py
