[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace"
version = "0.1.0"
description = "Mechanistic Interpretability under Precision Constraints - Auditing AI safety mechanisms during model optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Trace Contributors"}
]
keywords = [
    "mechanistic-interpretability",
    "quantization",
    "ai-safety",
    "sparse-autoencoders",
    "transformers"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "safetensors>=0.4.0",
    "einops>=0.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
full = [
    "bitsandbytes>=0.41.0",
    "auto-gptq>=0.5.0",
    "autoawq>=0.1.0",
    "transformer-lens>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/trace-interp/trace"
Documentation = "https://github.com/trace-interp/trace#readme"
Repository = "https://github.com/trace-interp/trace"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trace_lib = ["py.typed"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D107"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
